# sunshift

./: .gitignore  DEVELOPER.md  README.md  WAYBAR_WIDGET.md  auto-brightness.sh  auto-temperature.sh  brightness-down.sh  brightness-up.sh  setup.sh  smooth-temperature.sh  sunshift-widget.sh  sunshift.service  sunshift.timer  temp-down.sh  temp-up.sh  waybar-config-example.json  waybar-sunshift-style.css  wl-gammarelay-auto.service  wl-gammarelay-auto.timer
.cursor/: mcp.json
.taskmaster/docs/: prd.txt
sunshift-ui/: package.json  pnpm-lock.yaml
sunshift-ui/src/: App.tsx
sunshift-ui/src-tauri/: Cargo.toml  tauri.conf.json
sunshift-ui/src-tauri/src/: dbus.rs  lib.rs  main.rs  tray.rs
sunshift-ui/src/components/: BrightnessSlider.tsx  CircularTimeIndicator.tsx  DayGraph.tsx  PresetButton.tsx  TemperatureSlider.tsx
sunshift-ui/src/hooks/: useGammaRelay.ts  useTrayEvents.ts
sunshift-ui/src/stores/: gammaStore.ts  uiStore.ts
sunshift-ui/src/styles/: global.css
